--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
   </head>
   <body>
-    <div id="example"></div>
+    <div id="mount-point"></div>
+    <h2>Loader:</h2>
+    <div id="loader-point"></div>
     <script type="text/babel" src="src/helloworld.js"></script>
+    <script type="text/babel" src="src/loader.js"></script>
   </body>
 </html>
